# aichatbot

./: README.md  config.yaml  pyproject.toml
src/aichatbot/: config.py  main.py
src/aichatbot/agents/: __init__.py  weather_agent.py
src/aichatbot/bots/: __init__.py  base.py  telegram_bot.py
